tests/ui/tool-attributes/nested-disallowed.stderr
error: tools are always a single identifier, not paths with multiple segments
  --> $DIR/nested-disallowed.rs:2:18
   |
LL | #![register_tool(foo::bar)]
   |                  ^^^^^^^^
   |
help: did you maybe mean `foo`?
  --> $DIR/nested-disallowed.rs:2:18
   |
LL | #![register_tool(foo::bar)]
   |                  ^^^

error: aborting due to 1 previous error

